# tinytest

./: CMakeLists.txt  LICENSE  README.md  docs.md  premake5.lua
.cache/clangd/index/: tinytest.c.C69A5EABC381B411.idx  tinytest.h.0C56944D0BA698B0.idx
include/: tinytest.h
src/: tinytest.c
